# data_agent

./: MCP实现报告.md  数据分析Agent-MVP项目报告.md
data_analysis_agent/: README.md  pyproject.toml  项目整理总结.md
data_analysis_agent/data_analysis_agent/: __init__.py  agent.py  interactive_agent.py  main.py
data_analysis_agent/data_analysis_agent/core/: llm_client.py  report_generator.py
data_analysis_agent/data_analysis_agent/tools/: data_analyzer.py  document_processor.py
data_analysis_agent/examples/: create_sample_data.py  simple_test_data.csv
mcp_server/: README.md  file_parsers.py  main.py  pyproject.toml  requirements.txt
